--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,3 @@
-
 html {
      box-sizing: border-box;
      font-size: 10px;
@@ -20,4 +19,36 @@ html {
 *:before,
 *:after {
      box-sizing: inherit;
+}
+
+.card {
+  background: lightgray;
+  padding: 10px;
+  width: 300px;
+  height: 200px;
+  margin: 10px 10px;
+  color: white;
+  text-align: center;
+}
+.card-link {
+  color: blue;
+  border-bottom: dotted 1px;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-weight: 600;
+}
+.card-title {
+  color: black;
+  margin: 0;
+  padding: 0;
+  font-size: 1.6rem;
+  line-height: 2.2rem;
+  font-weight: 800;
+  letter-spacing: 0.225em;
+  text-transform: uppercase;
+}
+.card__img {
+  width: 100%;
+  height: 120px;
+  object-fit: cover;
 }
